[package]
name = "ultimate-frisbee-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultimate-frisbee-backend"
path = "src/main.rs"

[dependencies]
axum        = { version = "0.7" }
tokio       = { version = "1",   features = ["full"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tower-http  = { version = "0.5", features = ["cors"] }
rand        = "0.8"
